plugins {
	id 'org.springframework.boot' version '2.7.2'
	id 'io.spring.dependency-management' version '1.0.12.RELEASE'
	id 'java'
}

group = 'com.ll.exam'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '15'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jpa 라이브러리 추가
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

	implementation 'org.springframework.boot:spring-boot-starter-validation' // validation 라이브러리 추가

	implementation 'org.springframework.boot:spring-boot-starter-security' // spring security
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'  // 스프링 시큐리티 관련 타임리프 라이브러리

	implementation 'org.commonmark:commonmark:0.18.2' // markdown 설치
}

tasks.named('test') {
	useJUnitPlatform()
}
